начал делать фронт теста

--- a/templates/test.html
+++ b/templates/test.html
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    <div class="container mb-5">
+    <div id="card-parent" class="container mb-5">
         <div class="row mb-5">
             <div class="col">
                 <div class="question-container">
@@ -38,7 +38,7 @@
                     <button onclick="parserFromQAnswer(this)" class="btnAnswer">
                         <img src="https://via.placeholder.com/400x300" class="card-img-top w-100">
                         <div class="card-body text-center">
-                            <p class="card-text">Вариант ответа 2</p>
+                            <p class="card-text">technology</p>
                         </div>
                     </button>
                 </div>
@@ -48,7 +48,7 @@
                     <button onclick="parserFromQAnswer(this)" class="btnAnswer">
                         <img src="https://via.placeholder.com/400x300" class="card-img-top w-100">
                         <div class="card-body text-center">
-                            <p class="card-text">Вариант ответа 2</p>
+                            <p class="card-text">science</p>
                         </div>
                     </button>
                 </div>
@@ -60,7 +60,7 @@
                     <button onclick="parserFromQAnswer(this)" class="btnAnswer">
                         <img src="https://via.placeholder.com/400x300" class="card-img-top w-100">
                         <div class="card-body text-center">
-                            <p class="card-text">Вариант ответа 2</p>
+                            <p class="card-text">business</p>
                         </div>
                     </button>
                 </div>
@@ -70,15 +70,13 @@
                     <button onclick="parserFromQAnswer(this)" class="btnAnswer">
                         <img src="https://via.placeholder.com/400x300" class="card-img-top w-100">
                         <div class="card-body text-center">
-                            <p class="card-text">Вариант ответа 2</p>
+                            <p class="card-text">cars</p>
                         </div>
                     </button>
                 </div>
             </div>
         </div>
     </div>
-
-
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
