переделал кнопку теста

--- a/templates/test.html
+++ b/templates/test.html
@@ -48,7 +48,7 @@
                     <button onclick="parserFromQAnswer(this)" class="btnAnswer">
                         <img src="https://via.placeholder.com/400x300" class="card-img-top w-100">
                         <div class="card-body text-center">
-                            <p class="card-text">science</p>
+                            <p class="card-text">technology</p>
                         </div>
                     </button>
                 </div>
@@ -60,7 +60,7 @@
                     <button onclick="parserFromQAnswer(this)" class="btnAnswer">
                         <img src="https://via.placeholder.com/400x300" class="card-img-top w-100">
                         <div class="card-body text-center">
-                            <p class="card-text">business</p>
+                            <p class="card-text">technology</p>
                         </div>
                     </button>
                 </div>
@@ -70,7 +70,7 @@
                     <button onclick="parserFromQAnswer(this)" class="btnAnswer">
                         <img src="https://via.placeholder.com/400x300" class="card-img-top w-100">
                         <div class="card-body text-center">
-                            <p class="card-text">cars</p>
+                            <p class="card-text">technology</p>
                         </div>
                     </button>
                 </div>
